Updated Boolean call.